@@ -74,14 +74,18 @@ install-doc:
 	mkdir -m 0755 -p $(DOCDIR)
 	install -p -m 0644 $(DOCFILES) $(DOCDIR)
 
-install-ubuntu: install copy-init install-doc
+install-debian: install copy-init install-doc
 	mkdir   -p -m 0755 $(KCONF)/header_postinst.d
 	install -p -m 0755 kernel_postinst.d_dkms $(KCONF)/header_postinst.d/dkms
 	mkdir   -p -m 0755 $(ETC)/template-dkms-mkdeb/debian
 	ln -s template-dkms-mkdeb $(ETC)/template-dkms-mkdsc
 	install -p -m 0664 template-dkms-mkdeb/Makefile $(ETC)/template-dkms-mkdeb/
 	install -p -m 0664 template-dkms-mkdeb/debian/* $(ETC)/template-dkms-mkdeb/debian/
+	chmod +x $(ETC)/template-dkms-mkdeb/debian/postinst
+	chmod +x $(ETC)/template-dkms-mkdeb/debian/prerm
+	chmod +x $(ETC)/template-dkms-mkdeb/debian/rules
 	rm $(DOCDIR)/COPYING*
+	rm $(DOCDIR)/sample*
 
 deb_destdir=$(BUILDDIR)/dist
 TARBALL=$(deb_destdir)/$(RELEASE_STRING).tar.gz
