@@ -25,11 +25,7 @@ install: build
 	dh_testroot
 	dh_prep 
 	dh_installdirs
-	$(MAKE) install-ubuntu DESTDIR=$(CURDIR)/debian/dkms
-	chmod a+x $(CURDIR)/debian/dkms/etc/dkms/template-dkms-mkdeb/debian/postinst
-	chmod a+x $(CURDIR)/debian/dkms/etc/dkms/template-dkms-mkdeb/debian/prerm
-	chmod a+x $(CURDIR)/debian/dkms/etc/dkms/template-dkms-mkdeb/debian/rules
-	rm -rf $(CURDIR)/debian/dkms/usr/share/doc/dkms/sample*
+	$(MAKE) install-debian DESTDIR=$(CURDIR)/debian/dkms
 	
 binary-arch: build install
 binary-indep: build install
